[package]
name = "orca"
version = "0.7.0"
authors = ["Benny A <virusdownloader7@gmail.com>"]
description = "A Reddit API client for Rust"
readme = "README.md"
documentation = "https://docs.rs/orca"
repository = "https://github.com/IntrepidPig/orca"
license = "MPL-2.0"
keywords = ["client", "api", "reddit"]

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
failure = "0.1"
failure_derive = "0.1"
open = "1.2"
url = "1.6"
rand = "0.3"
hyper = "0.12"
futures = "0.1"
tokio-core = "0.1"
hyper-tls = "0.3"
log = "0.3"
base64 = "0.10"

[dev-dependencies]
env_logger = "0.4"
