[package]
name = "orca"
version = "0.8.0"
authors = ["Benny A <virusdownloader7@gmail.com>"]
description = "A Reddit API client for Rust"
readme = "README.md"
documentation = "https://docs.rs/orca"
repository = "https://github.com/IntrepidPig/orca"
license = "MPL-2.0"
keywords = ["client", "api", "reddit"]
edition = "2018"

[dependencies]
chrono = "0.4.9"
serde = "1.0.101"
json = { package = "serde_json", version = "1.0.41" }
open = "1.3.2"
url = "2.1.0"
rand = "0.7.2"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-tls = "0.4.0-alpha.4"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await", "unstable"] }
tokio = "0.2.0-alpha.6"
log = "0.4.8"
base64 = "0.10.1"
snafu = "0.5.0"

[dev-dependencies]
env_logger = "0.4"
